--- a/DeleteLogs/App.config
+++ b/DeleteLogs/App.config
@@ -1,6 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
+  <connectionStrings>
+    <add name="MicroDB" connectionString="Password=logo;Persist Security Info=True;User ID=logo;Initial Catalog=MikroDB_V15_DISCOUNT;Data Source=."/>
+
+  </connectionStrings>
 </configuration>
